<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/startScreenBackground"
    >
    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="190dp"
        android:layout_height="200dp"
        android:background="@drawable/start_screen_logo2"
        />

    <TextView
        android:text="@string/appAbout"
        android:textSize="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/arial"
        android:textColor="@color/startScreenTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/appAboutEmail"
        android:onClick="appAboutEmail"
        android:textSize="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/arial"
        android:textColor="@color/startScreenTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/startScreenTerms"
        android:textSize="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:gravity="center|bottom"
        android:fontFamily="@font/arial"
        android:textColor="@color/startScreenTermsTextColor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
</LinearLayout>