<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signInScreenBackground"
    android:orientation="vertical"
    >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/register_enter_white_main_block"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/washRegisterLoadImageText"
                android:fontFamily="@font/arial"
                android:textColor="@color/signInScreenLoadPhotoText"
                android:textSize="14dp"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/washRegisterImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="300dp"
                android:maxHeight="300dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">
                <Button
                    android:onClick="washRegisterMakePhotoBtn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/wash_register_camera_btn"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:onClick="washRegisterSelectImageBtn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/wash_register_attach_image"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/washUploadBtn"
                android:onClick="washUploadBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/register_enter_btn_main_color"
                android:fontFamily="@font/arial"
                android:textColor="@color/signInScreenBtnTextColor"
                android:textSize="15dp"
                android:text="@string/washRegisterLoadImageLoadBtn" />
            <Button
                android:id="@+id/washSkipBtn"
                android:onClick="washSkipBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/register_enter_btn_forgot"
                android:fontFamily="@font/arial"
                android:textColor="@color/signInScreenBtnTextColor"
                android:textSize="15dp"
                android:text="@string/washRegisterLoadImageSkipBtn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/washRegisterLoadImageTextBottom"
                android:fontFamily="@font/arial"
                android:textColor="@color/signInScreenLoadPhotoText"
                android:textSize="12dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
</LinearLayout>